--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,10 @@
 .layout {
-  width: 100%;
-  height: 100%;
+  margin: 0;
+  padding: 0;
+  min-width: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f2f2f2;
 }
